--- a/TEST/Views/Shared/_Layout.cshtml
+++ b/TEST/Views/Shared/_Layout.cshtml
@@ -85,6 +85,12 @@
 
         $(document).ready(function () {
             $("#myDropdown").css('display', 'block');
+
+
+            if (window.location.href.includes("Ventas") || window.location.href.includes("Configuracion") || window.location.href.includes("Clientes") || window.location.href.includes("Articulos") ) {
+                $("#DivFecha").css('display', 'block');
+            }
+            
         });
         
 
@@ -138,6 +144,9 @@
                     <a href="~/Configuracion/Index">Configuración</a>
                 </div>
             </div>
+            <div id="DivFecha" style="float:right;text-align:right;color: white;padding: 12px;font-size: 20px; display:none;">
+                Fecha: @DateTime.Now.ToString("dd/MM/yyyy")
+            </div>
         </div>
     </div>
     
@@ -157,9 +166,7 @@
                 @RenderBody()
                 <hr />
 
-                <footer>
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-                </footer>
+                
             </div>
 
             @Scripts.Render("~/bundles/jquery")
